# STM32L4xx_HAL_ST

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml
cmsis/device/: stm32l4xx.h
examples/gpio/: CMakeLists.txt  gpio_example.c  stm32l4xx_it.c
lib/st/: CMakeLists.txt
lib/st/device/: stm32l4xx.h
linker/: linker.ld
scripts/: build.sh  build_clean.sh  start_gdb.sh  start_openocd.sh
startup/: startup.c
